{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 71,
  "lineage": "8dabe65b-193d-ff03-c11e-79e7c8a61b26",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "burgerbuilder_appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [
                  "burgerbuilder-backend.internal.nicebeach-3608a673.swedencentral.azurecontainerapps.io"
                ],
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/backendAddressPools/backendPool",
                "ip_addresses": [],
                "name": "backendPool"
              },
              {
                "fqdns": [
                  "burgerbuilder-frontend.internal.nicebeach-3608a673.swedencentral.azurecontainerapps.io"
                ],
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/backendAddressPools/frontendPool",
                "ip_addresses": [],
                "name": "frontendPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/backendHttpSettingsCollection/backendHttpSetting",
                "name": "backendHttpSetting",
                "path": "",
                "pick_host_name_from_backend_address": true,
                "port": 443,
                "probe_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/probes/backendProbe",
                "probe_name": "backendProbe",
                "protocol": "Https",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              },
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/backendHttpSettingsCollection/frontendHttpSetting",
                "name": "frontendHttpSetting",
                "path": "",
                "pick_host_name_from_backend_address": true,
                "port": 443,
                "probe_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/probes/frontendProbe",
                "probe_name": "frontendProbe",
                "protocol": "Https",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGatewayWebApplicationFirewallPolicies/burgerbuilder-waf-policy",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/frontendIPConfigurations/frontendPublicIp",
                "name": "frontendPublicIp",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/publicIPAddresses/burgerbuilder-appgw-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/frontendPorts/frontendPort",
                "name": "frontendPort",
                "port": 80
              },
              {
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/frontendPorts/httpsPort",
                "name": "httpsPort",
                "port": 443
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/gatewayIPConfigurations/appgw-ip-config",
                "name": "appgw-ip-config",
                "subnet_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/virtualNetworks/burgerbuilder-vnet/subnets/appgw-snet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/frontendIPConfigurations/frontendPublicIp",
                "frontend_ip_configuration_name": "frontendPublicIp",
                "frontend_port_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/frontendPorts/frontendPort",
                "frontend_port_name": "frontendPort",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/httpListeners/httpListener",
                "name": "httpListener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/frontendIPConfigurations/frontendPublicIp",
                "frontend_ip_configuration_name": "frontendPublicIp",
                "frontend_port_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/frontendPorts/httpsPort",
                "frontend_port_name": "httpsPort",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/httpListeners/httpsListener",
                "name": "httpsListener",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/sslCertificates/burgerbuilder-cert",
                "ssl_certificate_name": "burgerbuilder-cert",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw",
            "identity": [],
            "location": "swedencentral",
            "name": "burgerbuilder-appgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "",
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/probes/backendProbe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "backendProbe",
                "path": "/actuator/health",
                "pick_host_name_from_backend_http_settings": true,
                "port": 0,
                "protocol": "Https",
                "timeout": 30,
                "unhealthy_threshold": 3
              },
              {
                "host": "",
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/probes/frontendProbe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "frontendProbe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": true,
                "port": 0,
                "protocol": "Https",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [
              {
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/redirectConfigurations/redirectToHttps",
                "include_path": true,
                "include_query_string": true,
                "name": "redirectToHttps",
                "redirect_type": "Permanent",
                "target_listener_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/httpListeners/httpsListener",
                "target_listener_name": "httpsListener",
                "target_url": ""
              }
            ],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/httpListeners/httpListener",
                "http_listener_name": "httpListener",
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/requestRoutingRules/redirectHttpToHttps",
                "name": "redirectHttpToHttps",
                "priority": 10,
                "redirect_configuration_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/redirectConfigurations/redirectToHttps",
                "redirect_configuration_name": "redirectToHttps",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/httpListeners/httpsListener",
                "http_listener_name": "httpsListener",
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/requestRoutingRules/pathBasedRuleHttps",
                "name": "pathBasedRuleHttps",
                "priority": 20,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "PathBasedRouting",
                "url_path_map_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/urlPathMaps/pathBasedRouting",
                "url_path_map_name": "pathBasedRouting"
              }
            ],
            "resource_group_name": "bb-selwan-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [
              {
                "data": "MIIKPwIBAzCCCfUGCSqGSIb3DQEHAaCCCeYEggniMIIJ3jCCBFIGCSqGSIb3DQEHBqCCBEMwggQ/AgEAMIIEOAYJKoZIhvcNAQcBMFcGCSqGSIb3DQEFDTBKMCkGCSqGSIb3DQEFDDAcBAgiPywe05zHggICCAAwDAYIKoZIhvcNAgkFADAdBglghkgBZQMEASoEEEejqY78GKBAZYvFfkONMp6AggPQklIO4AZEJOTSx4PM0tYgO7lWpGArIpaD1yY2iIwI1C7s2wOnRI2zhkf4IZPZ5cLotOtH/TveDLgE7LsVSZIKY7Np1rhQQcZJsdtBrIfI2VFKZLrXfNltgdL/IZMAh8Q5oBfCz4NRIrPOxoWslivXnYwK1Fu+nRTyWQCQ0w/bSThJ539/VYZsTdWZgrelvh92wY/x0fgPUm04aaBp9Cir6SrRDnHuq4gn6q0tLn5NlkT+lhDa4yEI7TAO2ms [...]
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/sslCertificates/burgerbuilder-cert",
                "key_vault_secret_id": "",
                "name": "burgerbuilder-cert",
                "password": "MyStrongPfxPassword123!",
                "public_cert_data": "MIIDlgYJKoZIhvcNAQcCoIIDhzCCA4MCAQExADALBgkqhkiG9w0BBwGgggNrMIIDZzCCAk+gAwIBAgIUDDmj/VVFTwfexLbqDFEETE01G98wDQYJKoZIhvcNAQELBQAwQzEcMBoGA1UEAwwTYnVyZ2VyYnVpbGRlci5sb2NhbDEWMBQGA1UECgwNQnVyZ2VyQnVpbGRlcjELMAkGA1UEBhMCU0UwHhcNMjUxMDEwMTYxMjUyWhcNMjYxMDEwMTYxMjUyWjBDMRwwGgYDVQQDDBNidXJnZXJidWlsZGVyLmxvY2FsMRYwFAYDVQQKDA1CdXJnZXJCdWlsZGVyMQswCQYDVQQGEwJTRTCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAMS9RUmX5mliQeJxX2i9YFgSk26y0w22z66YH/gDLPByLwlmQMLyKOSmV+u6SvimPP8 [...]
              }
            ],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "Environment": "Production",
              "Owner": "Selwan",
              "Project": "BurgerBuilder"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [
              {
                "default_backend_address_pool_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/backendAddressPools/frontendPool",
                "default_backend_address_pool_name": "frontendPool",
                "default_backend_http_settings_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/backendHttpSettingsCollection/frontendHttpSetting",
                "default_backend_http_settings_name": "frontendHttpSetting",
                "default_redirect_configuration_id": "",
                "default_redirect_configuration_name": "",
                "default_rewrite_rule_set_id": "",
                "default_rewrite_rule_set_name": "",
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/urlPathMaps/pathBasedRouting",
                "name": "pathBasedRouting",
                "path_rule": [
                  {
                    "backend_address_pool_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/backendAddressPools/backendPool",
                    "backend_address_pool_name": "backendPool",
                    "backend_http_settings_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/backendHttpSettingsCollection/backendHttpSetting",
                    "backend_http_settings_name": "backendHttpSetting",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/urlPathMaps/pathBasedRouting/pathRules/apiRule",
                    "name": "apiRule",
                    "paths": [
                      "/api/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  },
                  {
                    "backend_address_pool_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/backendAddressPools/backendPool",
                    "backend_address_pool_name": "backendPool",
                    "backend_http_settings_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/backendHttpSettingsCollection/backendHttpSetting",
                    "backend_http_settings_name": "backendHttpSetting",
                    "firewall_policy_id": "",
                    "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/applicationGateways/burgerbuilder-appgw/urlPathMaps/pathBasedRouting/pathRules/actuatorRule",
                    "name": "actuatorRule",
                    "paths": [
                      "/actuator/*"
                    ],
                    "redirect_configuration_id": "",
                    "redirect_configuration_name": "",
                    "rewrite_rule_set_id": "",
                    "rewrite_rule_set_name": ""
                  }
                ]
              }
            ],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ssl_certificate"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "name": "burgerbuilder-appgw",
            "resource_group_name": "bb-selwan-rg",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af"
          },
          "dependencies": [
            "azurerm_container_app.backend",
            "azurerm_container_app.frontend",
            "azurerm_container_app_environment.burgerbuilder_env",
            "azurerm_log_analytics_workspace.burgerbuilder_law",
            "azurerm_public_ip.burgerbuilder_appgw_pip",
            "azurerm_resource_group.main",
            "azurerm_subnet.aca",
            "azurerm_subnet.appgw",
            "azurerm_user_assigned_identity.aca_identity",
            "azurerm_virtual_network.main",
            "azurerm_web_application_firewall_policy.burgerbuilder_waf_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "appgw_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/networkSecurityGroups/appgw-nsg",
            "location": "swedencentral",
            "name": "appgw-nsg",
            "resource_group_name": "bb-selwan-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow internal Azure communication for App Gateway v2",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "65200-65535"
                ],
                "direction": "Inbound",
                "name": "Allow-AppGateway-Internal",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "appgw-nsg",
            "resource_group_name": "bb-selwan-rg",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "burgerbuilder_appgw_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/publicIPAddresses/burgerbuilder-appgw-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "135.225.92.111",
            "ip_version": "IPv4",
            "location": "swedencentral",
            "name": "burgerbuilder-appgw-pip",
            "resource_group_name": "bb-selwan-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Environment": "Production",
              "Owner": "Selwan",
              "Project": "BurgerBuilder"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aca",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "aca_delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.App/environments"
                  }
                ]
              }
            ],
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/virtualNetworks/burgerbuilder-vnet/subnets/aca-infra-snet",
            "name": "aca-infra-snet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "bb-selwan-rg",
            "virtual_network_name": "burgerbuilder-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "aca-infra-snet",
            "resource_group_name": "bb-selwan-rg",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af",
            "virtual_network_name": "burgerbuilder-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/virtualNetworks/burgerbuilder-vnet/subnets/appgw-snet",
            "name": "appgw-snet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "bb-selwan-rg",
            "virtual_network_name": "burgerbuilder-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "appgw-snet",
            "resource_group_name": "bb-selwan-rg",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af",
            "virtual_network_name": "burgerbuilder-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/virtualNetworks/burgerbuilder-vnet/subnets/db-snet",
            "name": "db-snet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "bb-selwan-rg",
            "virtual_network_name": "burgerbuilder-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "db-snet",
            "resource_group_name": "bb-selwan-rg",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af",
            "virtual_network_name": "burgerbuilder-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "appgw_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/virtualNetworks/burgerbuilder-vnet/subnets/appgw-snet",
            "network_security_group_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/networkSecurityGroups/appgw-nsg",
            "subnet_id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/virtualNetworks/burgerbuilder-vnet/subnets/appgw-snet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.appgw_nsg",
            "azurerm_resource_group.main",
            "azurerm_subnet.appgw",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "898777bf-50ad-4695-8da7-63b45836d387",
            "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/virtualNetworks/burgerbuilder-vnet",
            "location": "swedencentral",
            "name": "burgerbuilder-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "bb-selwan-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.20.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/virtualNetworks/burgerbuilder-vnet/subnets/appgw-snet",
                "name": "appgw-snet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/networkSecurityGroups/appgw-nsg"
              },
              {
                "address_prefixes": [
                  "10.20.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "aca_delegation",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.App/environments"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/virtualNetworks/burgerbuilder-vnet/subnets/aca-infra-snet",
                "name": "aca-infra-snet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.20.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/4421688c-0a8d-4588-8dd0-338c5271d0af/resourceGroups/bb-selwan-rg/providers/Microsoft.Network/virtualNetworks/burgerbuilder-vnet/subnets/db-snet",
                "name": "db-snet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "burgerbuilder-vnet",
            "resource_group_name": "bb-selwan-rg",
            "subscription_id": "4421688c-0a8d-4588-8dd0-338c5271d0af"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}